# LDR-Net

./: .gitignore  README.md  metadata.json  pyproject.toml  requirements.txt  test.jsonl
configs/: ldr_net_smoke.yaml  ldr_net_v1.yaml  vindr_stage1.yaml
ldr_net/: __init__.py
ldr_net/data/: __init__.py  collate.py  datasets.py
ldr_net/engine/: __init__.py  loops.py  trainer.py
ldr_net/losses/: __init__.py  box_ops.py  criterion.py  matcher.py
ldr_net/models/: __init__.py  backbone.py  fpn.py  heads.py  model.py
ldr_net/utils/: __init__.py  checkpoint.py  data_audit.py  train.py
scripts/: convert_vindr_to_jsonl.py  eval.py  infer.py  train.py
tmp_vindr_converter_out/: metadata.json  test.jsonl  train.jsonl
tmp_vindr_converter_test/: annotations_test.csv  annotations_train.csv  image_labels_test.csv  image_labels_train.csv
