[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ldr-net"
version = "0.1.0"
description = "Lesion-to-Disease Reasoning Network training skeleton"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "PyYAML>=6.0.1",
  "tqdm>=4.66.0",
  "scipy>=1.11.0",
]

[tool.setuptools.packages.find]
include = ["ldr_net*"]
